<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_lights"
        android:enabled="true"
        android:icon="@drawable/menu_btn_lights"
        android:title="@string/String_Lights"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_themes"
        android:enabled="true"
        android:icon="@drawable/menu_btn_themes"
        android:title="@string/String_Themes"
        app:showAsAction="ifRoom" />
    <item
    android:id="@+id/menu_settings"
    android:enabled="true"
    android:icon="@drawable/menu_btn_settings"
    android:title="@string/String_Settings"
    app:showAsAction="ifRoom" />
</menu>