<resources>
    <string name="app_name">Philips You</string>
    <string name="main_good_day" translatable="false">Good-day</string>
    <string name="String_GoodMorning">Hello, good morning.</string>
    <string name="String_GoodAfternoon">Hello, good afternoon.</string>
    <string name="String_GoodEvening">Hello, good evening.</string>
    <string name="String_Lights">Lights</string>
    <string name="String_Groups">Groups</string>
    <string name="String_Switch">Off/On</string>
    <string name="String_Themes">Themes</string>
    <string name="String_Settings">Settings</string>
    <string name="String_IP">Bridge IP-address</string>
    <string name="String_Port">Bridge port number</string>
    <string name="String_Save">Save</string>
    <string name="String_Restart">Please Restart</string>
    <string name="String_MadeBy">Made By: Jan Kees Broekhuizen / Dave Visser</string>
    <string name="String_ChangeColor">Change lightcolor</string>
    <string name="String_ExamplePort">e.g. 80</string>
    <string name="String_ExampleIP">e.g. 192.168.1.1</string>
    <string name="String_NoGroup">No group selected.</string>
    <string name="String_Theme_Sunset">Sunset Clicked!</string>
    <string name="String_Theme_Forest">Forest Clicked!</string>
    <string name="String_Theme_Sunlight">Sunlight Clicked!</string>
    <string name="String_Theme_Work">Work Clicked!</string>
    <string name="String_Theme_Stars">Stars Clicked!</string>

</resources>